cabal-version:       2.2
name:                Hibet
version:             0.6
description:         tibetan-english translator
synopsis:            translator
homepage:            https://github.com/willbasky/Hibet
bug-reports:         https://github.com/willbasky/Hibet/issues
license:             MIT
license-file:        LICENSE
author:              willbasky
maintainer:          no mail
copyright:           2018 willbasky
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
data-files:          dicts/*.txt
                   , stuff/titles.toml
                   , stuff/tibetan-syllables
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/willbasky/Hibet.git

library
  hs-source-dirs:      src
  exposed-modules:     Cli
                     , Handlers
                     , Interpretator
                     , Labels
                     , Language
                     , Parse
                     , Pretty
                     , Tibet
                     , Types

  other-modules:       Paths_Hibet
  autogen-modules:     Paths_Hibet

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  build-depends:       base ^>= 4.12.0.0
                     , bifunctors
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , file-embed
                     , filepath
                     , free
                     , gitrev
                     , haskeline
                     , megaparsec
                     , mtl
                     , neat-interpolation ^>= 0.3.2.2
                     , optparse-applicative
                     , pager
                     , parsers-megaparsec
                     , path
                     , path-io >= 1.4.0
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , radixtree
                     , terminal-size
                     , text
                     , tomland >= 1.1.0.1
                     , unordered-containers

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


executable hibet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base ^>= 4.12.0.0
                     , Hibet

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


test-suite hibet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base ^>= 4.12.0.0
                     , Hibet

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

benchmark tibet-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , Hibet
                     , async
                     , criterion
                     , weigh
                     , path
                     , path-io >= 1.4.0
                     , text
                     , streamly
                     , unordered-containers
                     , bytestring
                     , conduit

  other-modules:       Paths_tibet

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                       OverloadedStrings
                       LambdaCase
                       ScopedTypeVariables
                       TypeApplications


