cabal-version:       3.0
name:                hibet
version:             1.3.8
description:         tibetan-english translator
synopsis:            translator
homepage:            https://github.com/willbasky/Hibet
bug-reports:         https://github.com/willbasky/Hibet/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              willbasky
maintainer:          willgame(at)mail(dot)ru
copyright:           2023 willbasky
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
data-files:          dicts/*.txt
                   , stuff/titles.toml
                   , stuff/tibetan-syllables
extra-source-files:
  test/env/data/dicts/*.txt
  test/env/data/stuff/tibetan-syllables
  test/env/data/stuff/titles.toml
tested-with:
  GHC==9.4.8

source-repository head
  type:               git
  location:           https://github.com/willbasky/Hibet.git

common common-dot
  default-extensions:
    OverloadedRecordDot

common common-options
  build-depends:       base >= 4.11 && < 5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                      --  -split-sections
                       -fhide-source-paths
                      --  -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages
                      --  -ddump-if-trace
                      --  -O2
                      --  -eventlog
                      --  -finfo-table-map
                      --  -fdistinct-constructor-tables

  default-language:    Haskell2010

  default-extensions:
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DuplicateRecordFields
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       PolyKinds
                       ScopedTypeVariables
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances

library
  import:
      common-options
    , common-dot
  ghc-options:
                       -fplugin=Effectful.Plugin
  hs-source-dirs:      src
  exposed-modules:
                       App
                       Cli
                       Effects.Common
                       Effects.File
                       Effects.Console
                       Effects.PrettyPrint
                       Env
                       Dictionary
                       Label
                       Parse
                       Parse.SyllableLines
                       Parse.TibetanWord
                       Parse.WylieWord
                       Parse.WylieText
                       Parse.Type
                       Pretty
                       Translator
                       Type
                       Utility

  other-modules:       Paths_hibet
                     , Sandbox
  autogen-modules:     Paths_hibet

  build-depends:
                       bytestring
                     , containers
                     , deepseq
                     , directory
                     , effectful-th
                     , effectful
                     , effectful-core
                     , effectful-plugin
                     , log-effectful
                     , resourcet-effectful
                     , extra
                     , filepath
                     , gitrev
                     , haskeline
                     , hashable
                     , megaparsec
                     , neat-interpolation
                     , optparse-applicative
                     , pager
                     , parallel
                     , path
                     , path-io
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , radixtree ^>=0.6.0.0
                     , terminal-size
                     , text
                     , text-rope
                     , tomland ^>=1.3.3.2
                     , unordered-containers


executable hibet
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                      --  -O2 -eventlog
                       -- ^ for threadscope
                       -threaded
                       -rtsopts
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

                       -with-rtsopts=-N16
                       -with-rtsopts=-qn8
                       -with-rtsopts=-A64m
                       -with-rtsopts=-AL128m
                       -with-rtsopts=-I0
                       -with-rtsopts=-T
  build-depends:
                       hibet


test-suite hibet-pretty
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/pretty
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:
                       hibet
                     , hspec
                     , prettyprinter

test-suite hibet-labels
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/labels
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:
                       hibet
                     , bytestring
                     , containers
                     , hspec

test-suite hibet-env
  import:
      common-options
    , common-dot
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/env
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:
                       hibet
                     , bytestring
                     , hspec
                     , containers
                     , text
                     , unordered-containers
                     , effectful-core

  other-modules:       Paths_hibet
                       Paths

test-suite hibet-parse
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/parse
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:
                       hibet
                     , hspec
                    --  , megaparsec

  other-modules:       Paths_hibet


benchmark hibet-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:
                       hibet
                     , criterion
                     , path
                     , path-io >= 1.4.0
                     , text
                     , bytestring
                     , file-embed
                     , text-rope
                    --  , weigh
                    --  , streamly
                    --  , unordered-containers
                    --  , conduit
                    --  , async

  other-modules:       Paths_hibet
                       Lines
                       Common

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N


