cabal-version:       2.2
name:                tibet
version:             0.5
description:         tibetan-english translator
synopsis:            translator
homepage:            https://github.com/willbasky/TibetCli
bug-reports:         https://github.com/willbasky/TibetCli/issues
license:             MIT
license-file:        LICENSE
author:              willbasky
maintainer:          no mail
copyright:           2018 willbasky
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
data-files:          dicts/*.txt
                   , titles.json
                   , parser/tibetan-syllables
tested-with:         GHC == 8.4.4

source-repository head
  type:                git
  location:            https://github.com/willbasky/TibetCli.git

library
  hs-source-dirs:      src
  exposed-modules:     Cli
                     , Handlers
                     , Labels
                     , Parse
                     , Prettify
                     , Tibet

  other-modules:       Paths_tibet
  autogen-modules:     Paths_tibet

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  build-depends:       base ^>= 4.12
                     , aeson
                     , ansi-terminal
                     , bifunctors
                     , bytestring
                     , deepseq
                     , directory
                     , gitrev
                     , file-embed
                     , megaparsec
                     , neat-interpolation ^>= 0.3.2.2
                     , optparse-applicative
                     , path
                     , path-io >= 1.4.0
                     , text
                     , unordered-containers
                     , radixtree
                     , parsers-megaparsec

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


executable tibet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base >= 4.10 && < 4.13
                     , tibet

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


test-suite tibet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base >= 4.10 && < 4.13
                     , tibet

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications


